@@ -68,6 +68,12 @@
 
 	<LI>Table captions can now be bottom aligned.
 
+	<li>Blocks now break at the bottom of a page if the
+	current line height + standard line height goes below
+	the bottom of the page; this prevents images with
+	captions from getting erroneously moved to the top of
+	the next page.
+
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
 	<LI>Switching between landscape and portrait orientations
